; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/siis/extr_siis.c_siis_ch_led.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/siis/extr_siis.c_siis_ch_led.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.siis_channel = type { i32 }

@SIIS_P_CTLCLR = common dso_local global i32 0, align 4
@SIIS_P_CTL_LED_ON = common dso_local global i32 0, align 4
@SIIS_P_CTLSET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @siis_ch_led to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @siis_ch_led(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca %struct.siis_channel*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i8*, i8** %3, align 8
  %8 = ptrtoint i8* %7 to i64
  store i64 %8, i64* %5, align 8
  %9 = load i64, i64* %5, align 8
  %10 = call %struct.siis_channel* @device_get_softc(i64 %9)
  store %struct.siis_channel* %10, %struct.siis_channel** %6, align 8
  %11 = load i32, i32* %4, align 4
  %12 = icmp eq i32 %11, 0
  br i1 %12, label %13, label %20

13:                                               ; preds = %2
  %14 = load %struct.siis_channel*, %struct.siis_channel** %6, align 8
  %15 = getelementptr inbounds %struct.siis_channel, %struct.siis_channel* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @SIIS_P_CTLCLR, align 4
  %18 = load i32, i32* @SIIS_P_CTL_LED_ON, align 4
  %19 = call i32 @ATA_OUTL(i32 %16, i32 %17, i32 %18)
  br label %27

20:                                               ; preds = %2
  %21 = load %struct.siis_channel*, %struct.siis_channel** %6, align 8
  %22 = getelementptr inbounds %struct.siis_channel, %struct.siis_channel* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* @SIIS_P_CTLSET, align 4
  %25 = load i32, i32* @SIIS_P_CTL_LED_ON, align 4
  %26 = call i32 @ATA_OUTL(i32 %23, i32 %24, i32 %25)
  br label %27

27:                                               ; preds = %20, %13
  ret void
}

declare dso_local %struct.siis_channel* @device_get_softc(i64) #1

declare dso_local i32 @ATA_OUTL(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
